Contacts page is ready

--- a/src/scss/global/_04-global.scss
+++ b/src/scss/global/_04-global.scss
@@ -97,6 +97,7 @@ h1,.title-h1{
 	font-size: rem(24px);
 	line-height: rem(28px);
 	margin-bottom: rem(20px);
+	color: #273142;
 }
 h2,.title-h2{
 	font-size: rem(22px);
