--- a/src/scss/sales/sales.scss
+++ b/src/scss/sales/sales.scss
@@ -12,6 +12,7 @@
       }
     }
     &__title{
+      text-transform: uppercase;
       font-weight: bold;
       font-size: rem(18px);
       line-height: rem(21px);
