--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,6 +15,7 @@
 @import "blog/blog";
 @import "blog-page/blog-page";
 @import "sales/sales";
+@import "contacts/contacts";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
