--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -16,6 +16,8 @@
 @import "blog-page/blog-page";
 @import "sales/sales";
 @import "contacts/contacts";
+@import "faq-page/faq-page";
+@import "page-nav/page-nav";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
