Payments page is ready

--- a/src/components/bem-blocks/global/actions-blocks/master-block/master-block.scss
+++ b/src/components/bem-blocks/global/actions-blocks/master-block/master-block.scss
@@ -2,6 +2,7 @@
   background-color: var(--yellow-color);
   padding: rem(20px);
   border-radius: rem(5px);
+  height: 100%;
   &__content{
     color: #333333;
     margin: rem(20px) 0;
