--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -18,6 +18,7 @@
 @import "contacts/contacts";
 @import "faq-page/faq-page";
 @import "page-nav/page-nav";
+@import "payments/payments";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
