--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -19,6 +19,7 @@
 @import "faq-page/faq-page";
 @import "page-nav/page-nav";
 @import "payments/payments";
+@import "refund/refund";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
