company page is ready

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -20,6 +20,7 @@
 @import "page-nav/page-nav";
 @import "payments/payments";
 @import "refund/refund";
+@import "company/company";
 /* NOTE - import here your style modules */
 // GLOBAL C
 @import 'media';
