--- a/src/scss/global/_04-global.scss
+++ b/src/scss/global/_04-global.scss
@@ -128,6 +128,10 @@ iframe{
 	width: 100%;
 	height: 100%;
 }
+p:not([class]),h1:not([class]),h2:not([class]),h3:not([class]),h4:not([class]),h5:not([class]),h6:not([class]),li:not([class]),blockquote:not([class]),table:not([class]){
+	margin-bottom: rem(10px);
+}
+
 //Radio input
 input[type="radio"]{
 	position: relative;
@@ -588,6 +592,10 @@ hr{
 @-moz-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
 @-ms-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
 @keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
+.bottom-action{
+	margin-top: rem(20px);
+	margin-bottom: rem(20px);
+}
 // Table
 .table {
 	&-container {
@@ -777,4 +785,12 @@ hr{
 			}
 		}
 	}
+	.bottom-action{
+		margin-top: rem(-75px);
+		position: relative;
+	}
+	p:not([class]),h1:not([class]),h2:not([class]),h3:not([class]),h4:not([class]),h5:not([class]),h6:not([class]),li:not([class]),blockquote:not([class]),table:not([class]){
+		margin-bottom: rem(15px);
+	}
+
 }
