add search for faq page

--- a/src/components/page/_3_footer.html
+++ b/src/components/page/_3_footer.html
@@ -53,5 +53,6 @@
     </div>
 </footer>
 @@include('../bem-blocks/global/popup/popup-call.html')
+@@include('../bem-blocks/global/popup/popup-write.html')
 @@include('../bem-blocks/global/search-popup/search-popup.html')
 @@include('../bem-blocks/global/popup/popup-blog.html')
